Structure du header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<p>Test</p>
+		<header>
+			<h1>Le monde</h1>
+			<nav>
+				<ul>
+					<li>A propos</li>
+					<li>Contact</li>
+				</ul>
+			</nav>
+		</header>
 	</body>
 </html>
