Ajout d'une liste

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 	<body>
 		<p>Test</p>
 		<p>Bonjour depuis mon PC !</p>
+		<div>
+			<ul>
+				<li>Concombre</li>
+				<li>Tomate</li>
+			</ul>
+		</div>
 	</body>
 </html>
